@@ -1,3 +1,9 @@
+2002-08-01  Simon Waters <simon@wretched.demon.co.uk>
+
+	* Correct additional input file name limits
+	  and related field sizes throughout code.
+	  (NB UNIVERSIAL code changes untested)
+
 2002-05-19  Simon Waters <simon@wretched.demon.co.uk>
 
 	* Corrected command line size to 128 through out cmd.c to
